crates/reinhardt-pages/tests/ui/form/fail/strip_arguments_field_collision.stderr
error: strip_arguments key 'tenant_id' collides with a declared form field; either rename the field or remove this strip entry
  --> tests/ui/form/fail/strip_arguments_field_collision.rs:19:4
   |
19 |             tenant_id: 0u64,
   |             ^^^^^^^^^
